# fantasy-rugby

rugby-fantasy/backend/: alembic.ini  pyproject.toml  test_connection.py  test_league.py  test_password.py  test_user.py
rugby-fantasy/backend/alembic/versions/: 27644ddf57f1_initial_migration_user_and_league_tables.py  88640bf74dd5_league_membership_table.py  a0b480e53467_added_transfer_limit_for_rounds.py  a6e343bccc5d_adding_position_to_squadplayer.py  bcf3bb8f5f91_squadplayer_player_not_required.py  c12700715a3c_initial_migration_2_user_and_league_.py  c234fee3f35d_add_all_core_models.py  d55b0b1f561c_league_membership_table.py  e6d98aa230ce_player_out_can_be_null.py  e8b05513b90d_update_user_model_for_authentication.py  f4080bf1e8c0_initial_migration_with_all_models_and_.py
rugby-fantasy/backend/app/: database.py  exceptions.py  main.py
rugby-fantasy/backend/app/auth/: auth.py  routes.py
rugby-fantasy/backend/app/routers/: competitions.py  leagues.py  squads.py
rugby-fantasy/backend/app/schemas/: league.py  scoring.py  squad.py  stats.py
rugby-fantasy/backend/app/services/: competition_service.py  league_service.py  scoring_service.py  squad_service.py  stats_service.py
rugby-fantasy/backend/models/: Competition.py  CompetitionRound.py  League.py  LeagueMember.py  LeagueMembership.py  Player.py  RoundStats.py  Squad.py  SquadPlayer.py  Transfer.py  User.py  __init__.py
rugby-fantasy/docs/: database-setup.md
rugby-fantasy/frontend/: package-lock.json  package.json
rugby-fantasy/frontend/src/: App.jsx  main.jsx
(+1 files in other folders)
